Import of ISHIGAKI/Acme-CPANAuthors-Japanese-0.090101 from CPAN.
gitpan-cpan-distribution: Acme-CPANAuthors-Japanese
gitpan-cpan-version:      0.090101
gitpan-cpan-path:         ISHIGAKI/Acme-CPANAuthors-Japanese-0.090101.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,23 @@
 --- #YAML:1.0
-name:                Acme-CPANAuthors-Japanese
-version:             0.080522
-abstract:            We are Japanese CPAN authors
-license:             perl
-author:              
+name:               Acme-CPANAuthors-Japanese
+version:            0.090101
+abstract:           We are Japanese CPAN authors
+author:
     - Kenichi Ishigaki <ishigaki@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    Acme::CPANAuthors:             0.02
-    Lingua::JA::Romaji::Valid:     0
-    Test::More:                    0.47
-    Test::UseAllModules:           0.09
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Acme::CPANAuthors:    0.02
+    Lingua::JA::Romaji::Valid:  0
+    Test::More:           0.47
+    Test::UseAllModules:  0.09
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
