--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,25 @@
---- #YAML:1.0
-name:               Acme-CPANAuthors-Japanese
-version:            0.111012
-abstract:           We are Japanese CPAN authors
+---
+abstract: 'We are Japanese CPAN authors'
 author:
-    - Kenichi Ishigaki <ishigaki@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Kenichi Ishigaki <ishigaki@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Acme::CPANAuthors:    0.02
-    Lingua::JA::Romaji::Valid:  0
-    Test::More:           0.47
-    Test::UseAllModules:  0.09
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Acme-CPANAuthors-Japanese
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Acme::CPANAuthors: 0.02
+  Lingua::JA::Romaji::Valid: 0
+  Test::More: 0.47
+  Test::UseAllModules: 0.09
+version: 0.120927
