Import of ISHIGAKI/Acme-CPANAuthors-Japanese-0.140828 from CPAN.
gitpan-cpan-distribution: Acme-CPANAuthors-Japanese
gitpan-cpan-version:      0.140828
gitpan-cpan-path:         ISHIGAKI/Acme-CPANAuthors-Japanese-0.140828.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,23 +3,24 @@ abstract: 'We are Japanese CPAN authors'
 author:
   - 'Kenichi Ishigaki <ishigaki@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
+  Test::More: '0.47'
+  Test::UseAllModules: '0.09'
 configure_requires:
-  ExtUtils::MakeMaker: 0
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.76, CPAN::Meta::Converter version 2.132620'
+  ExtUtils::MakeMaker::CPANfile: '0.06'
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.142060'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Acme-CPANAuthors-Japanese
 no_index:
   directory:
     - t
     - inc
 requires:
-  Acme::CPANAuthors: 0.02
-  Lingua::JA::Romaji::Valid: 0
-  Test::More: 0.47
-  Test::UseAllModules: 0.09
-version: 0.131002
+  Acme::CPANAuthors: '0.02'
+resources:
+  repository: https://github.com/charsbar/acme-cpanauthors-japanese
+version: '0.140828'
